// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Portfolio /> <Porfolio.Image /> renders an image with populated data from props 1`] = `
<img
  alt="Gretsch Geeks icon"
  class="chakra-image css-1dzvt9d"
  src="/images/gretsch-logo.jpg"
/>
`;

exports[`<Portfolio /> <Portfolio.Button /> renders a button with text 1`] = `
<button
  class="chakra-button css-1efne3i"
  type="button"
>
  View
</button>
`;

exports[`<Portfolio /> <Portfolio.Item /> renders a button and calls openFeature() on click 1`] = `
<div
  class="css-79elbk"
  data-testid="portfolio-item"
  role="button"
>
  <div
    class="css-1xhj18k"
    role="group"
  >
    Children
  </div>
</div>
`;

exports[`<Portfolio /> <Portfolio.Text /> renders with populated data from props 1`] = `
<p
  class="chakra-text css-1lzpwia"
>
  An example E-commerce buy-sell platform built with modern React, Apollo 3 and Keystone.js as a headless CMS.
</p>
`;

exports[`<Portfolio /> <Portfolio.Title /> renders with populated data from props 1`] = `
<h3
  class="chakra-heading css-1l30lph"
>
  Gretsch Geeks
</h3>
`;

exports[`<Portfolio.Inner /> <Portfolio.Inner /> renders with a border-bottom if viewport width < 768px and projectsCount is 1 1`] = `
<div
  class="css-1yecze6"
>
  <div
    class="css-2lzsxm"
  />
  <button
    class="chakra-button css-1efne3i"
    type="button"
  >
    View
  </button>
</div>
`;

exports[`<Portfolio.Inner /> <Portfolio.Inner /> renders with a border-bottom if viewport width < 768px, projectsCount is 2 and it is not the last project 1`] = `
<div
  class="css-1yecze6"
>
  <div
    class="css-2lzsxm"
  />
  <button
    class="chakra-button css-1efne3i"
    type="button"
  >
    View
  </button>
</div>
`;

exports[`<Portfolio.Inner /> <Portfolio.Inner /> renders with a border-bottom if viewport width > 768px and projectsCount is < 3 1`] = `
<div
  class="css-1yecze6"
>
  <div
    class="css-2lzsxm"
  />
  <button
    class="chakra-button css-1efne3i"
    type="button"
  >
    View
  </button>
</div>
`;

exports[`<Portfolio.Inner /> <Portfolio.Inner /> renders with a border-bottom if viewport width > 768px, it is not in the first row, and it is the last one to be rendered before wrapping to a new row 1`] = `
<div
  class="css-1yecze6"
>
  <div
    class="css-2lzsxm"
  />
  <button
    class="chakra-button css-1efne3i"
    type="button"
  >
    View
  </button>
</div>
`;

exports[`<Portfolio.Inner /> <Portfolio.Inner /> renders without a border-bottom if viewport width < 768px, projectsCount is 2 and it is the last project 1`] = `
<div
  class="css-txocgk"
>
  <div
    class="css-2lzsxm"
  />
  <button
    class="chakra-button css-1efne3i"
    type="button"
  >
    View
  </button>
</div>
`;

exports[`<Portfolio.Inner /> <Portfolio.Inner /> renders without a border-bottom if viewport width > 768px, projectsCount is 3 and it is on the bottom row 1`] = `
<div
  class="css-txocgk"
>
  <div
    class="css-2lzsxm"
  />
  <button
    class="chakra-button css-1efne3i"
    type="button"
  >
    View
  </button>
</div>
`;
